sua crud product

--- a/src/main/resources/templates/admin/product/index.html
+++ b/src/main/resources/templates/admin/product/index.html
@@ -54,7 +54,7 @@
 						                  <td th:text="${product.desc}"></td>
 						                  <td th:text="${product.createTime}"></td>
 						                  <td th:text="${product.statusLable()}"></td>
-						                  <td><a th:href="@{'/admin/product/update?id=' + ${category.id}}">Sửa</a></td>
+						                  <td><a th:href="@{'/admin/product/update?id=' + ${product.id}}">Sửa</a></td>
 					                </tr>
 				                </tbody>
 				              </table>
