--- a/src/main/resources/templates/admin/product/form.html
+++ b/src/main/resources/templates/admin/product/form.html
@@ -20,7 +20,8 @@
 	        </div>
 	      </div><!-- /.container-fluid -->
 	    </section>
-		<form role="form" th:action="@{'/admin/product/' + ${product.id == null ? 'create' : 'update?id=' + product.id}}" th:object="${product}" method="POST">
+		<form role="form" th:action="@{'/admin/product/' + ${product.id == null ? 'create' : 'update?id=' + product.id}}" th:object="${product}" 
+			enctype="multipart/form-data" method="POST">
            <div class="card-body">
              <div class="form-group">
                <label>Tên sản phẩm</label>
@@ -59,6 +60,10 @@
                   		th:value="${category.id}"
                   		th:text="${category.name}"></option>
                 </select>
+             </div>
+             <div class="form-group">
+                <label>Upload hình ảnh</label>
+                <input name="multipartFile" type="file" multiple>
              </div>
            </div>
            <div class="card-footer">
